refactor: 테스트코드 변수명 네이밍 수정